--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -5,15 +5,25 @@ date: "9/17/2020"
 output: html_document
 ---
 # Assignment 1
+
 [personal profile](https://github.com/Qianli2020)
+
 ## My goals for HUDK4050
-* Coding
-* enjoying
+
+* goal 1 getting knowledge
+* goal 2 learning skill
+* goal 3 using it in my life
+
 ## Video Review
-The video transcript make my work easy!
+
+The video transcript make my work easy! 
+The BGM is great!
+
 | Skill | Score|
-|:--|:--|
-|coding|1|
-|cool|hard|
+| ---- | ---- |
+| coding | 1 |
+| cool | hard |
+
 ## This is how I am feeling about this semester
-![Mood text](https://news.artnet.com/market/nada-miami-2019-trends-1724091/logo.png)
+
+![Mood text](HUDK4050 !!!!.jpg)
