Assignment Submit! Yingxin Ye

--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -20,7 +20,7 @@ I really like the video transcript, it helps to get to know the vocab, especiall
 
  | Skill          | Score              |  
  | Coding         | 3                  |  
- |video transcript| Speed up the pacing|  
+ |video transcript| speed up the pace a bit|  
 
 
 ## This is how I am feeling about the semester
