--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -18,9 +18,11 @@ output: html_document
 
 I really like the video transcript, it helps to get to know the vocab, especially for the new learners in this field.  
 
- | Skill          | Score              |  
- | Coding         | 3                  |  
- |video transcript| speed up the pace a bit|  
+
+| Skill | Score| 
+|------|-----|
+| Coding | 3  |  
+|Video transcript| Speed up the pace a bit|  
 
 
 ## This is how I am feeling about the semester
